# aoc-2024

./: Cargo.toml  README.md
src/day01/: day01.rs
src/day02/: day02.rs
src/day03/: day03.rs
src/day05/: day05.rs
