[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = { version = "1.11.1" }

[[bin]]
name = "day01"
path = "src/day01/day01.rs"

[[bin]]
name = "day02"
path = "src/day02/day02.rs"

[[bin]]
name = "day03"
path = "src/day03/day03.rs"

[[bin]]
name = "day05"
path = "src/day05/day05.rs"